--- a/index.html
+++ b/index.html
@@ -101,15 +101,15 @@
 
                                 <li class="list-group-item">
                                     
-                                    <a class="nav-link" href="">Kong: Skull Island </a>
+                                    <a class="nav-link" target="_blank" href="https://en.wikipedia.org/wiki/Kong:_Skull_Island ">Kong: Skull Island </a>
                                 </li>
 
                                 <li class="list-group-item">
-                                    <a class="nav-link" href="#">Ghost in the Shell </a>
+                                    <a class="nav-link" target="_blank" href="https://en.wikipedia.org/wiki/Ghost_in_the_Shell">Ghost in the Shell </a>
                                 </li>
 
                                 <li class="list-group-item">
-                                    <a class="nav-link" href="#">Beauty and the Beast </a>
+                                    <a class="nav-link" target="_blank" href="https://en.wikipedia.org/wiki/Beauty_and_the_Beast_(2017_film)">Beauty and the Beast </a>
                                 </li>
                               </ul>
                        
